Add Welcome page

--- a/src/style.css
+++ b/src/style.css
@@ -102,3 +102,9 @@ input[type='text'] {
 .success {
   color: #2ECC40;
 }
+
+h1, h2, h3 {
+  line-height: 1.2;
+  clear: both;
+  color: #C20108;
+}
